--- a/6/index.html
+++ b/6/index.html
@@ -377,6 +377,11 @@
         still present in the generated image, but they are much smaller and facing away from the camera (looking towards
         the temple).
     </p>
+    <div class="image-wrapper indent-level-1">
+        <div class="image-block">
+            <img src="./media/RePaint.png" alt="" width=900>
+        </div>
+    </div>
     <br>
     <h3>Estimation of gaze</h3>
     <p class='indented'> Leveraging the state of the art model for gaze estimation <a
@@ -385,7 +390,7 @@
     </p>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
-            <img src="./media/RePaint.png" alt="" width=900>
+            <img src="./media/GazeEstimation.png" alt="" width=900>
         </div>
     </div>
     <br>
