adding human valiadation.

--- a/6/index.html
+++ b/6/index.html
@@ -533,6 +533,12 @@
     <p class='indented'> As mentioned before, we intend to fine tune the model to follow the gradient of the L2 Loss to
         allow for more efficient sampling (For this project we did random sampling).
     </p>
+    <h3>Human validation</h3>
+    <p class='indented'> We have access to AR glasses (<a
+            href="https://github.com/facebookresearch/projectaria_eyetracking?utm_source=chatgpt.com">Meta Aria</a>),
+        which have Eye tracking capabilities. With this hardware we could validate the gaze map predictions of our
+        generations.
+    </p>
     <h3>Target gaze map automation</h3>
     <p class='indented'>We started to explore automating the target gaze map with simple mouse clicks on an image by
         leveraging state of the art monocular depth estimating models such as <a
