--- a/6/index.html
+++ b/6/index.html
@@ -369,7 +369,7 @@
         </div>
     </div>
     <br><br>
-    <h3>Content preservation via ReEdit and Text prompt</h3>
+    <h3>Content preservation via RePaint and Text prompt</h3>
     <p class='indented'> As a design choice, we utilized the architecture proposed by <a
             href="https://github.com/andreas128/RePaint">RePaint</a> to give the artist the option to <b>preserve</b>
         the pixels in the area they want to draw attention (as specified by the target gaze map). To maintain context
