--- a/6/index.html
+++ b/6/index.html
@@ -551,7 +551,7 @@
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;">Marigold's depth estimation</div>
+                <div class="image-text" style="font-weight: bold;">Original image</div>
                 <img src="./media/Depth_orig.jpg" alt="" width="512">
             </div>
             <div class="image-item">
